tests/fail/semantic/product_field_type_mismatch.cyt
record Test(value: int)

rule [] -> Test(value: "hello")

// args: --no-colour

// expected stderr:
// error: expected expression of type `int` but found `string`
//   ┌─ ../tests/fail/semantic/product_field_type_mismatch.cyt:3:24
//   │
// 3 │ rule [] -> Test(value: "hello")
//   │                        ^^^^^^^ this has type `string` but should be of type `int`